--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,6 @@ motor==3.3.2
 pillow==9.5.0
 psutil
 py-tgcalls==0.9.7
-pykeyboard
 pymongo==4.6.3
 python-dotenv
 pyyaml==6.0.1
@@ -41,3 +40,4 @@ bing_image_downloader
 git+https://github.com/alexmercerind/youtube-search-python@main
 git+https://github.com/joetats/youtube_search@master
 bing-image-urls
+git+https://github.com/Badmunda50/Pyroi
